--- a/k8s/server-deployment.yml
+++ b/k8s/server-deployment.yml
@@ -34,4 +34,4 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: pgpassword
-                  key: PG_PASSWORD
+                  key: PGPASSWORD
