--- a/k8s/certificate.yml
+++ b/k8s/certificate.yml
@@ -1,7 +1,7 @@
 apiVersion: certmanager.k8s.io/v1alpha1
 kind: Certificate
 metadata:
-  name: k9s-multi-com-tls
+  name: k8s-multi-com-tls
 spec:
   secretName: k8s-multi-com
   issuerRef:
@@ -11,3 +11,10 @@ spec:
   dnsNames:
     - recursive.online
     - www.recursive.online
+  acme:
+    config:
+      -http01:
+        ingressClass: nginx
+      domains:
+        - recursive.online
+        - www.recursive.online
